move SecurityService to security package add OAuth2 dependence create yml to authenticate with google

--- a/src/main/resources/aplication.example.yml
+++ b/src/main/resources/aplication.example.yml
@@ -12,3 +12,10 @@ spring:
       ddl-auto: update #none and create-drop
     properties:
       hibernate.format_sql: true
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${OAUTH2_ID}
+            client-secret: ${OAUTH2_SECRET}
