--- a/src/main/resources/aplication.example.yml
+++ b/src/main/resources/aplication.example.yml
@@ -19,3 +19,5 @@ spring:
           google:
             client-id: ${OAUTH2_ID}
             client-secret: ${OAUTH2_SECRET}
+springdoc:
+  override-with-generic-response: false
