--- a/src/main/resources/aplication.example.yml
+++ b/src/main/resources/aplication.example.yml
@@ -24,6 +24,8 @@ springdoc:
   override-with-generic-response: false
 
 logging:
+  pattern:
+    console: '%clr(%d{dd-MM-yyyy HH:mm:ss}){faint} %clr(%5p) %clr([%t]){faint} %clr(%-40.40logger){cyan} %clr(:){yellow} %m%n'
   file:
     name: app.log
   level:
