--- a/src/main/resources/aplication.example.yml
+++ b/src/main/resources/aplication.example.yml
@@ -38,3 +38,9 @@ logging:
     org:
       springframework:
         web: debug
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
